front/src/styles/Main.scss
@import 'loading';
@import 'home';
@import 'navbar';
@import 'profile';
@import 'explore';

::-webkit-scrollbar {
    width: 10px;

    &:hover{
        width: 3px;
    }
}

::-webkit-scrollbar-track {
    background: #f1f1f1;
    box-shadow: inset 0 0 .25em #2e2e2e;
}

::-webkit-scrollbar-thumb {
    background: -webkit-linear-gradient(top, rgba(#5600ff, .6) 0%,rgba(#ff0000, .4) 50%,rgba(#00ff28, .2) 100%);
    border-radius: .25em;
}

::-webkit-scrollbar-thumb:hover {
    background: -webkit-linear-gradient(top, rgba(#5600ff, .9) 0%,rgba(#ff0000, .7) 50%,rgba(#00ff28, .5) 100%);
}

::-webkit-resizer{
    width: 20px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* //////////////////// TYPOS /////////////////////////////////// */
/* TYPO POUR LES TITRES */
@font-face {
  font-family: 'Gotham';
  src: url("../fonts/Gotham-Bold.otf");
  src: local('Gotham'),
          url('../fonts/Gotham-Bold.otf');
}

/* TYPO POUR LE TEXTE */
@font-face{
  font-family: 'SourceSans';
  src: url("../fonts/SourceSansPro-Light_0.ttf");
  src: local('SourceSans'),
          url('../fonts/SourceSansPro-Light_0.ttf');
}

/* TYPO EN PIXEL */
@font-face{
  font-family: 'Fedra';
  src: url("../fonts/Fedra09-Normal.otf");
  src: local('Fedra'),
          url('../fonts/Fedra09-Normal.otf')
}
/* //////////////////// FIN TYPOS /////////////////////////////////// */

#root{
  min-height: 100vh;
  padding-top: 66px;
  display: flex;
  flex-direction: column;

  main{
    flex: 1;
  }

}

footer{
    font-family: "Gotham";
    u{
        text-decoration: none;
    }
  .fedra-text{
      font-family: "Fedra";
  }
}

